--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 
 [env:esp32dev]
 platform = espressif32
+#platform = espressif32@1.2.0
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
