--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -10,8 +10,9 @@
 
 [env:esp32dev]
 platform = espressif32
-#platform = espressif32@1.2.0
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 
+lib_deps =
+  adafruit/MAX6675 library @ ^1.1.0 # Termistor
